# temp_proj

FFmpeg_sample/app/: build.gradle
FFmpeg_sample/app/jni/: CMakeLists.txt  VideoPlayer.cpp  VideoPlayer.h  jni.cpp  ndkvideoplayer.cpp
FFmpeg_sample/app/jni/helpers/: EnvHolder.cpp  EnvHolder.h
FFmpeg_sample/app/src/androidTest/java/ffmpeg/main/ffmpeg_sample/: ExampleInstrumentedTest.java
FFmpeg_sample/app/src/main/: AndroidManifest.xml
FFmpeg_sample/app/src/main/java/ffmpeg/main/ffmpeg_sample/: MainActivity.java
FFmpeg_sample/app/src/main/java/ffmpeg/main/ffmpeg_sample/gles/: EGLRenderTarget.java  GLHelpers.java  ShaderProgram.java  Sphere.java  SphericalSceneRenderer.java
FFmpeg_sample/app/src/main/java/ffmpeg/main/ffmpeg_sample/player/: NativeVideoPlayer.java  NdkVideoPlayer.java  SphericalVideoPlayer.java
FFmpeg_sample/app/src/main/res/layout/: activity_main.xml
FFmpeg_sample/app/src/main/res/values/: strings.xml
FFmpeg_sample/app/src/test/java/ffmpeg/main/ffmpeg_sample/: ExampleUnitTest.java
FFmpeg_sample/gradle/wrapper/: gradle-wrapper.properties
